samples/_failures_safe/1761304718_c5d0d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_901a1c96.c: In function ‘main’:
./samples/SAFE/__tmp_901a1c96.c:133:13: error: expected declaration or statement at end of input
  133 |             }
      |             ^
./samples/SAFE/__tmp_901a1c96.c:133:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_901a1c96.c:133:13: error: expected declaration or statement at end of input
